[package]
name = "git-lfs-agent-rclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tempfile = "3.8.0"

[[bin]]
name = "git-lfs-agent-rclone"
path = "main.rs"
