[package]
name = "git-lfs-agent-rclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-rotate = "0.7.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
simple-home-dir = { version = "0.1.4", features = ["expand_tilde"] }
tempfile = "3.8.0"

[[bin]]
name = "git-lfs-agent-rclone"
path = "main.rs"
